--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 before_script:
-  - gem install csvlint
-  - gem install datapackage
+  - gem install cid
 script:
-  - datapackage datapackage.json
-  - (status=0 ; for file in *.csv; do csvlint "$file"; if [ $? == 1 ] ; then status=1 ; fi ; done; exit $status)
+  - cid validate
